<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:background="@color/successColor"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/success"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/transfer_request_successful"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:src="@drawable/baseline_check_24"
        android:contentDescription="@string/success" />

    <TextView

        android:id="@+id/textView3"
        style="@style/tvStyle"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvAmount"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"

        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        style="@style/tvStyle"
        android:text="@string/reference_number"
        app:layout_constraintBottom_toBottomOf="@+id/tvReference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvReference"
        style="@style/tvStyle"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <TextView
        android:id="@+id/textView7"
        style="@style/tvStyle"
        android:text="@string/withdrawable_balance"
        app:layout_constraintBottom_toBottomOf="@+id/tvWithdrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
 />

    <TextView
        android:id="@+id/tvWithdrow"
        style="@style/tvStyle"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReference" />

    <TextView
        android:id="@+id/tvTotalChanges"
        style="@style/tvStyle"
        android:text="@string/total_charges"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalchang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tvTotalchang"
        style="@style/tvStyle"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWithdrow" />

    <TextView
        android:id="@+id/textView11"
        style="@style/tvStyle"
        android:text="@string/holder_name"
        app:layout_constraintBottom_toBottomOf="@+id/tvHoldername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalChanges" />

    <TextView
        android:id="@+id/tvHoldername"
        style="@style/tvStyle"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalchang" />

    <TextView
        android:id="@+id/textView13"
        style="@style/tvStyle"
        android:text="@string/a_c_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvAcountnumber"
        style="@style/tvStyle"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHoldername" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/done"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:background="#108b43"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>